# AgainstPP

./: .gitignore  .gitmodules  AgainstPP.sln  CMakeLists.txt  CopyAssets.bat  README.md
AgainstPP/: Actor.cpp  Actor.hpp  AgainstPP.vcxproj  AgainstPP.vcxproj.filters  Asset.cpp  Asset.hpp  Assets.hpp  BaseGraphics.cpp  BaseGraphics.hpp  CMakeLists.txt  Entity.cpp  Entity.hpp  EntityComponent.hpp  Error.cpp  Error.hpp  GLTFData.cpp  GLTFData.hpp  Game.cpp  Game.hpp  GraphicUtils.cpp  GraphicUtils.hpp  Graphics.cpp  Graphics.hpp  Main.cpp  MainMenuScene.cpp  MainMenuScene.hpp  Mesh.cpp  Mesh.hpp  MeshComponent.cpp  MeshComponent.hpp  MeshEntity.cpp  MeshEntity.hpp  Primitive.hpp  Scene.cpp  Scene.hpp  SplashSceneGraphics.cpp  SplashSceneGraphics.hpp  SplashScreenScene.cpp  SplashScreenScene.hpp  StaticMeshComponent.cpp  (+62 more)
AgainstPP/Assets/Scenes/MainMenu/: MainMenu.gltf
AgainstPP/Assets/Scenes/SplashScreen/: SplashScreen.gltf
AgainstPP/Assets/Shaders/MainMenu/: UI.frag  UI.frag.spv  UI.vert  UI.vert.spv  compile.bat  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
AgainstPP/Assets/Shaders/SplashScreen/: UI.vert.spv  compile.bat  frag.frag  frag.spv  vert.spv  vert.vert
AgainstPP/Assets/UIElements/MainMenu/: MainMenu.gltf
AgainstPP/Assets/UIElements/SplashScreen/: SplashScreen.gltf
AgainstPP/Images/SplashScreen/: SplashScreen.tga
AgainstPP/Shaders/MainMenu/: UI.vert  UI.vert.spv
AgainstPP/Shaders/SplashScreen/: UI.frag.spv  frag.frag  vert.vert
AgainstPP/UIElements/SplashScreen/: SplashScreen.gltf
